# morsels-py

./: .flake8  README.md  pyproject.toml
01-get_earliest/: earliest.py
02-count_words/: count.py  test_count.py
03-compact/: compact.py
04-add/: add.py
05-Circle/: circle.py  test_circle.py
06-tail/: tail.py
07-group_by/: group_by.py
08-fix_csv/: fix_csv.py  test_fix_csv.py
09-is_anagram/: anagram.py
