[tool.poetry]
name = "morsels-py"
version = "0.0.0"
description = ""
authors = ["CoreyCole <coreyleoc@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
flake8 = "^3.6"
mypy = "^0.641.0"
autopep8 = "^1.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
